refactor: deleted @ApiResponses from controller layer, edited collect(Collectors.toList()) to basic toList(), edit class modifiers from public to default in tests